tests/run/error_contract_requires.out
error[precondition_failed]: precondition failed in 'clamp' (requires, line 4)
  --> tests/run/error_contract_requires.em:4:20 (in clamp)
  route:  clamp (line 4) <- main (line 10)
